Migrate to Spring Boot 4