@@ -5,6 +5,6 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 public record CallStep(@JsonProperty("callee") String callee) implements RegexStep {
     @Override
     public String toString() {
-        return String.format("(?&%s)", callee);
+        return "(?&%s)".formatted(callee);
     }
 }
