@@ -5,6 +5,6 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 public record MatchStep(@JsonProperty("matchString") String matchString) implements RegexStep {
     @Override
     public String toString() {
-        return String.format("(?: %s )", matchString);
+        return "(?: %s )".formatted(matchString);
     }
 }
